locked sass-rails gem

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,9 @@
 development:
   adapter: postgresql
   database: trails_development
+  host: localhost
 
 test:
   adapter: postgresql
   database: trails_test
+  host: localhost
